<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="1400dp"
    android:layout_height="1400dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/two" />

    <EditText
        android:id="@+id/movieName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:hint="@string/enter_title" />

    <EditText
        android:id="@+id/director"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:hint="@string/enter_director" />

    <EditText
        android:id="@+id/genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:hint="@string/enter_genre" />

    <EditText
        android:id="@+id/actors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:hint="@string/enter_actors" />
</LinearLayout>
